# Compiler-2024

./: .gitignore  README.md  gradecompiler  project.tar  runverifier  score_table.py  timecompiler  wrapper-README.md
Compiler/: Makefile  TODO.md
Compiler/lab2/: README.md
Compiler/lab5/: Makefile
bench/: bench.py
harness/: Makefile  README.md  runHarness  sources.mlb
harness/.molasses/: molasses-file0.sml  molasses-file1.sml  molasses-file10.sml  molasses-file11.sml  molasses-file12.sml  molasses-file13.sml  molasses-file14.sml  molasses-file15.sml  molasses-file16.sml  molasses-file17.sml  molasses-file18.sml  molasses-file19.sml  molasses-file2.sml  molasses-file20.sml  molasses-file21.sml  molasses-file22.sml  molasses-file23.sml  molasses-file24.sml  molasses-file25.sml  molasses-file26.sml  molasses-file27.sml  molasses-file28.sml  molasses-file29.sml  molasses-file3.sml  molasses-file30.sml  molasses-file4.sml  molasses-file5.sml  molasses-file6.sml  molasses-file7.sml  molasses-file8.sml  molasses-file9.sml  molasses-sources1.cm
harness/config/: Args.sml  Config.sml
harness/drive/: Compiler.sig  Compiler.sml  Runner.sig  Runner.sml
harness/grader/: Bench.sml  Checkpoint.sml  General.sml  GeneralTest.sml  Suite.sml  TestFile.sml
harness/score/: Outcome.sml  Scoring.sml  Stats.sig  Stats.sml  Summary.sig  (+1 more)
runtime/: 15411-l5.h0  bench.c
starter/rust/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
starter/rust/src/: args.rs  asm.rs  ast.rs  c0.lalrpop  checkpoint.rs  codegen.rs  emit.rs  error.rs  lex.rs  main.rs  parse.rs  tc.rs
(+18563 files in other folders)
